--- a/StoreManagement/Master/AdminMaster.Master
+++ b/StoreManagement/Master/AdminMaster.Master
@@ -337,7 +337,7 @@
         <!-- Page Content -->
         <div id="page-wrapper">
             <div class="container-fluid">
-                <div class="row">
+                <div class="row" style="margin-top:2%;">
                     <div class="col-lg-12">
                         <asp:ContentPlaceHolder ID="cphContain" runat="server">
 
@@ -345,10 +345,20 @@
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
+                <div class"row">
+                    <div class="col-lg-12">
+                        <hr />
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-12">
-                        <asp:ContentPlaceHolder ID="cphData" runat="server">
-                        </asp:ContentPlaceHolder>
+                            <div class="panel panel-primary">
+                                <div class="panel-heading">Manage Data</div>
+                                <div class="panel-body">
+                                    <asp:ContentPlaceHolder ID="cphData" runat="server">
+                                    </asp:ContentPlaceHolder>
+                                </div>
+                            </div>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
